# Runner

./: .gitignore  COMPOSE_MIGRATION_README.md  COMPOSE_QUICK_START.md  README.md  build.gradle  build.gradle.kts  gradle.properties  local.properties  project-rules-en.md  project-rules-zh.md  project_description_for_ai.txt  settings.gradle  settings.gradle.kts  update_stable.json
.cursor/rules/: all.mdc
.github/workflows/: android.yml
Server/: build.gradle
app/: .gitignore  build.gradle  build.gradle.kts  lint-baseline.xml  proguard-rules.pro
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/aidl/android/view/: IRotationWatcher.aidl
app/src/main/assets/: profile  tools.dex
app/src/main/cpp/: CMakeLists.txt  executils.c  processutils.c  processutils.cpp  starter.c
app/src/main/cpp/rish/: rikka_rish_RishHost.cpp
app/src/main/cpp/starter/: starter.c
app/src/main/cpp/terminal/: common.cpp  common.h  termExec.cpp  termExec.h
app/src/main/java/rikka/rish/: Rish.java  RishConfig.java  RishConstants.java  RishService.java  RishTerminal.java
app/src/main/java/yangfentuozi/runner/: App.kt  Runner.kt
app/src/main/res/color/: grant_permissions_button_ripple_color_selector.xml
app/src/main/res/drawable/: cursor_style.xml  grant_permissions_buttons_bottom.xml  grant_permissions_buttons_top.xml  ic_add_24dp.xml  ic_apps_24.xml  ic_arrow_forward_ios_24.xml  ic_backup_restore_24.xml  ic_check_circle_outline_24.xml  ic_close_24.xml  ic_configs_24.xml  ic_configs_24dp.xml  ic_dark_mode_24.xml  ic_dark_mode_24dp.xml  ic_delete_outline_24.xml  ic_empty_icon_24.xml  ic_error_outline_24.xml  ic_file_24.xml  ic_format_color_fill_24.xml  ic_help_24.xml  ic_help_24dp.xml  ic_home.xml  ic_home_baseline_24.xml  ic_home_black_24dp.xml  ic_home_outline_24.xml  ic_import_export_24.xml  ic_info_24.xml  ic_invert_colors_24.xml  ic_language_24.xml  ic_language_24dp.xml  ic_launcher_background.xml  ic_launcher_round.xml  ic_layers.xml  ic_layers_baseline_24.xml  ic_layers_outline_24.xml  ic_merge_type_24.xml  ic_merge_type_24dp.xml  ic_no_24.xml  ic_no_24dp.xml  ic_palette_outline_24.xml  ic_play_arrow.xml  (+13 more)
app/src/main/res/layout/: activity_crash_report.xml  activity_env_manage.xml  activity_file_manger.xml  activity_main.xml  activity_pack.xml  activity_stream_activity.xml  dialog_about.xml  dialog_add.xml  dialog_choose_start_server.xml  dialog_edit.xml  dialog_edit_env.xml  dialog_edit_env_e.xml  dialog_edit_env_e2.xml  dialog_exec.xml  dialog_import.xml  dialog_pick_backup.xml  dialog_request_permission.xml  empty_processes.xml  fragment_auth.xml  fragment_authorization.xml  fragment_home.xml  fragment_proc.xml  fragment_processes.xml  fragment_runner.xml  fragment_settings.xml  fragment_terminal.xml  home_item_container.xml  home_service_status.xml  home_shizuku_perm_request.xml  home_shizuku_status.xml  home_term_ext_status.xml  item_auth.xml  item_auth_child.xml  item_cmd.xml  item_env.xml  item_env_item.xml  item_proc.xml  item_process.xml  terminal.xml  window_list_item.xml
app/src/main/res/menu/: bottom_nav_menu.xml  main.xml  menu_home.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml  theme.xml  themes.xml  themes_custom.xml  themes_overlay.xml  themes_override.xml  values.xml
app/src/main/res/values-night/: styles.xml  themes.xml
app/src/main/res/values-sw600dp/: dimens.xml  values.xml
app/src/main/res/values-v31/: colors.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: preference_setting.xml
emulatorview/: build.gradle  build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hiddenapi/bridge/: build.gradle
hiddenapi/stubs/: build.gradle
info/: build.gradle  proguard-rules.pro
rish/: build.gradle.kts
rish/src/main/aidl/rikka/rish/: IRishService.aidl
rish/src/main/cpp/: CMakeLists.txt  main.cpp
rish/src/main/java/rikka/rish/: RishConfig.java  RishService.java
server/: build.gradle  proguard-rules.pro
shared/: build.gradle.kts
shell/: build.gradle
term/: build.gradle  build.gradle.kts
term/src/main/: AndroidManifest.xml
term/src/main/res/layout/: term_activity.xml  window_list_item.xml
term/src/main/res/menu/: main.xml
term/src/main/res/values/: arrays.xml  defaults.xml  strings.xml
term/src/main/res/values-zh-rCN/: strings.xml
term/src/main/res/xml/: preferences.xml
terminal/libtermexec/: build.gradle
terminal/libtermexec/src/main/: AndroidManifest.xml
terminal/libtermexec/src/main/cpp/: CMakeLists.txt  process.cpp  process.h
terminal/term/: build.gradle
terminal/term/src/main/: AndroidManifest.xml
terminal/term/src/main/cpp/: CMakeLists.txt  common.cpp  termExec.cpp
terminal/term/src/main/res/layout/: term_activity.xml  (+1 more)
tools/: build.gradle  proguard-rules.pro
tools/src/main/java/a/: Cli.java
(+431 files in other folders)
